--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>Winter Classic</title>
-  <link rel="manifest" href="/manifest.webmanifest">
-  <link rel="apple-touch-icon" href="/assets/icon-192.png">
+  <link rel="manifest" href="/winter_classic/manifest.webmanifest">
+  <link rel="apple-touch-icon" href="/winter_classic/assets/icon-192.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="theme-color" content="#2a78c8">
-  <link rel="stylesheet" href="/assets/styles.css">
+  <link rel="stylesheet" href="/winter_classic/assets/styles.css">
   <script>
     if ("serviceWorker" in navigator) {
-      window.addEventListener("load", () => navigator.serviceWorker.register("/service-worker.js"));
+      window.addEventListener("load", () => navigator.serviceWorker.register("/winter_classic/service-worker.js"));
     }
   </script>
 </head>
@@ -28,47 +28,47 @@
       <p style="margin:8px 0 0">Install on iPhone from Safari: Share ▸ Add to Home Screen.</p>
     </div>
     <div class="grid">
-      <a class="card" href="/pages/white-net-best-ball.html">
+      <a class="card" href="/winter_classic/pages/white-net-best-ball.html">
         <h3>White Net Best Ball</h3>
         <div class="meta">12/11 • Morning</div>
         <span class="btn">Open</span>
       </a>
-      <a class="card" href="/pages/blue-net-best-ball.html">
+      <a class="card" href="/winter_classic/pages/blue-net-best-ball.html">
         <h3>Blue Net Best Ball</h3>
         <div class="meta">12/11 • Morning</div>
         <span class="btn">Open</span>
       </a>
-      <a class="card" href="/pages/interflight-chapman.html">
+      <a class="card" href="/winter_classic/pages/interflight-chapman.html">
         <h3>InterFlight Chapman</h3>
         <div class="meta">12/11 • Afternoon</div>
         <span class="btn">Open</span>
       </a>
-      <a class="card" href="/pages/white-net-alt-best-ball.html">
+      <a class="card" href="/winter_classic/pages/white-net-alt-best-ball.html">
         <h3>White Net Alternate Best Ball</h3>
         <div class="meta">12/12 • Morning</div>
         <span class="btn">Open</span>
       </a>
-      <a class="card" href="/pages/blue-net-alt-best-ball.html">
+      <a class="card" href="/winter_classic/pages/blue-net-alt-best-ball.html">
         <h3>Blue Net Alt Best Ball</h3>
         <div class="meta">12/12 • Morning</div>
         <span class="btn">Open</span>
       </a>
-      <a class="card" href="/pages/interflight-scramble.html">
+      <a class="card" href="/winter_classic/pages/interflight-scramble.html">
         <h3>InterFlight Scramble</h3>
         <div class="meta">12/12 • Afternoon</div>
         <span class="btn">Open</span>
       </a>
-      <a class="card" href="/pages/white-singles.html">
+      <a class="card" href="/winter_classic/pages/white-singles.html">
         <h3>White Singles</h3>
         <div class="meta">12/13 • Morning</div>
         <span class="btn">Open</span>
       </a>
-      <a class="card" href="/pages/blue-singles.html">
+      <a class="card" href="/winter_classic/pages/blue-singles.html">
         <h3>Blue Singles</h3>
         <div class="meta">12/13 • Morning</div>
         <span class="btn">Open</span>
       </a>
-      <a class="card" href="/pages/interflight-singles.html">
+      <a class="card" href="/winter_classic/pages/interflight-singles.html">
         <h3>InterFlight Singles</h3>
         <div class="meta">12/13 • Afternoon</div>
         <span class="btn">Open</span>
