--- a/pages/interflight-scramble.html
+++ b/pages/interflight-scramble.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>InterFlight Scramble • Winter Classic</title>
-  <link rel="stylesheet" href="/assets/styles.css">
+  <link rel="stylesheet" href="/winter_classic/assets/styles.css">
 </head>
 <body>
   <header class="header">
-    <a class="back" href="/index.html">‹ Back</a>
+    <a class="back" href="/winter_classic/index.html">‹ Back</a>
     <h1 style="margin-left:8px">InterFlight Scramble</h1>
   </header>
   <main class="container">
@@ -26,10 +26,10 @@
       <h2>Foursomes</h2>
       <table class="table">
 <tr><th colspan='2'>White Flight</th><th colspan='2'>Blue Flight</th></tr>
-<tr><td>Dan Sherman</td><td>Ron Carraher</td><td>Sam Carraher</td><td>Ricky Carraher</td></tr>
-<tr><td>Bret Bologna</td><td>Dave Franklin</td><td>Hunter Carmichael</td><td>Kevin Sullivan</td></tr>
-<tr><td>Alec Barancyk</td><td>Dan Darelson</td><td>Ruben Hernandez</td><td>Chris Martin</td></tr>
-<tr><td>Eric Newell</td><td>Mike Barancyk</td><td></td><td></td></tr>
+<tr><td>Dan Sherman</td><td>Ron Carraher</td><td>Hunter Carmichael</td><td>Alec Barancyk</td></tr>
+<tr><td>Bret Bologna</td><td>Dave Franklin</td><td>Kevin Sullivan</td><td>Dan Darelson</td></tr>
+<tr><td>Alec Barancyk</td><td>Eric Newell</td><td>Ruben Hernandez</td><td>Chris Martin</td></tr>
+<tr><td>Mike Barancyk</td><td></td><td></td><td></td></tr>
 </table>
     </div>
   </main>
