--- a/pages/white-singles.html
+++ b/pages/white-singles.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>White Singles • Winter Classic</title>
-  <link rel="stylesheet" href="/assets/styles.css">
+  <link rel="stylesheet" href="/winter_classic/assets/styles.css">
 </head>
 <body>
   <header class="header">
-    <a class="back" href="/index.html">‹ Back</a>
+    <a class="back" href="/winter_classic/index.html">‹ Back</a>
     <h1 style="margin-left:8px">White Singles</h1>
   </header>
   <main class="container">
