--- a/index.html
+++ b/index.html
@@ -27,52 +27,71 @@
       <span class="badge">Tap • Add to Home Screen</span>
       <p style="margin:8px 0 0">Install on iPhone from Safari: Share ▸ Add to Home Screen.</p>
     </div>
-    <div class="grid">
-      <a class="card" href="/winter_classic/pages/white-net-best-ball.html">
-        <h3>White Net Best Ball</h3>
-        <div class="meta">12/11 • Morning</div>
-        <span class="btn">Open</span>
-      </a>
-      <a class="card" href="/winter_classic/pages/blue-net-best-ball.html">
-        <h3>Blue Net Best Ball</h3>
-        <div class="meta">12/11 • Morning</div>
-        <span class="btn">Open</span>
-      </a>
-      <a class="card" href="/winter_classic/pages/interflight-chapman.html">
-        <h3>InterFlight Chapman</h3>
-        <div class="meta">12/11 • Afternoon</div>
-        <span class="btn">Open</span>
-      </a>
-      <a class="card" href="/winter_classic/pages/white-net-alt-best-ball.html">
-        <h3>White Net Alternate Best Ball</h3>
-        <div class="meta">12/12 • Morning</div>
-        <span class="btn">Open</span>
-      </a>
-      <a class="card" href="/winter_classic/pages/blue-net-alt-best-ball.html">
-        <h3>Blue Net Alt Best Ball</h3>
-        <div class="meta">12/12 • Morning</div>
-        <span class="btn">Open</span>
-      </a>
-      <a class="card" href="/winter_classic/pages/interflight-scramble.html">
-        <h3>InterFlight Scramble</h3>
-        <div class="meta">12/12 • Afternoon</div>
-        <span class="btn">Open</span>
-      </a>
-      <a class="card" href="/winter_classic/pages/white-singles.html">
-        <h3>White Singles</h3>
-        <div class="meta">12/13 • Morning</div>
-        <span class="btn">Open</span>
-      </a>
-      <a class="card" href="/winter_classic/pages/blue-singles.html">
-        <h3>Blue Singles</h3>
-        <div class="meta">12/13 • Morning</div>
-        <span class="btn">Open</span>
-      </a>
-      <a class="card" href="/winter_classic/pages/interflight-singles.html">
-        <h3>InterFlight Singles</h3>
-        <div class="meta">12/13 • Afternoon</div>
-        <span class="btn">Open</span>
-      </a>
+
+    <div class="section">
+      <h2>Day 1 • December 11</h2>
+      <h3>Morning</h3>
+      <div class="grid">
+        <a class="card" href="/winter_classic/pages/white-net-best-ball.html">
+          <h3>White Net Best Ball</h3>
+          <span class="btn">Open</span>
+        </a>
+        <a class="card" href="/winter_classic/pages/blue-net-best-ball.html">
+          <h3>Blue Net Best Ball</h3>
+          <span class="btn">Open</span>
+        </a>
+      </div>
+      <h3>Afternoon</h3>
+      <div class="grid">
+        <a class="card" href="/winter_classic/pages/interflight-chapman.html">
+          <h3>InterFlight Chapman</h3>
+          <span class="btn">Open</span>
+        </a>
+      </div>
+    </div>
+
+    <div class="section">
+      <h2>Day 2 • December 12</h2>
+      <h3>Morning</h3>
+      <div class="grid">
+        <a class="card" href="/winter_classic/pages/white-net-alt-best-ball.html">
+          <h3>White Net Alternate Best Ball</h3>
+          <span class="btn">Open</span>
+        </a>
+        <a class="card" href="/winter_classic/pages/blue-net-alt-best-ball.html">
+          <h3>Blue Net Alt Best Ball</h3>
+          <span class="btn">Open</span>
+        </a>
+      </div>
+      <h3>Afternoon</h3>
+      <div class="grid">
+        <a class="card" href="/winter_classic/pages/interflight-scramble.html">
+          <h3>InterFlight Scramble</h3>
+          <span class="btn">Open</span>
+        </a>
+      </div>
+    </div>
+
+    <div class="section">
+      <h2>Day 3 • December 13</h2>
+      <h3>Morning</h3>
+      <div class="grid">
+        <a class="card" href="/winter_classic/pages/white-singles.html">
+          <h3>White Singles</h3>
+          <span class="btn">Open</span>
+        </a>
+        <a class="card" href="/winter_classic/pages/blue-singles.html">
+          <h3>Blue Singles</h3>
+          <span class="btn">Open</span>
+        </a>
+      </div>
+      <h3>Afternoon</h3>
+      <div class="grid">
+        <a class="card" href="/winter_classic/pages/interflight-singles.html">
+          <h3>InterFlight Singles</h3>
+          <span class="btn">Open</span>
+        </a>
+      </div>
     </div>
   </main>
   <div class="footer">Built for offline use • Winter Classic</div>
