--- a/pages/blue-singles.html
+++ b/pages/blue-singles.html
@@ -26,8 +26,8 @@
       <h2>Foursomes</h2>
       <table class="table">
 <tr><th>Match</th><th>Match</th></tr>
-<tr><td>Mike Barancyk &nbsp;vs&nbsp; Chris Martin</td><td>Ruben Hernandez &nbsp;vs&nbsp; Kevin Sullivan</td></tr>
-<tr><td>Dan Darelson &nbsp;vs&nbsp; Alec Barancyk</td><td>Hunter Carmichael &nbsp;vs&nbsp; Eric Newell</td></tr>
+<tr><td>Mike Barancyk &nbsp;vs&nbsp; Ruben Hernandez</td><td>Dan Darelson &nbsp;vs&nbsp; Hunter Carmichael</td></tr>
+<tr><td>Chris Martin &nbsp;vs&nbsp; Kevin Sullivan</td><td>Alec Barancyk &nbsp;vs&nbsp; Eric Newell</td></tr>
 </table>
     </div>
   </main>
