--- a/pages/interflight-chapman.html
+++ b/pages/interflight-chapman.html
@@ -26,10 +26,10 @@
       <h2>Foursomes</h2>
       <table class="table">
 <tr><th colspan='2'>White Flight</th><th colspan='2'>Blue Flight</th></tr>
-<tr><td>Van Huffine</td><td>Ricky Carraher</td><td>Eric Newell</td><td>Kevin Sullivan</td></tr>
-<tr><td>Ron Carraher</td><td>Dave Franklin</td><td>Dan Darelson</td><td>Alec Barancyk</td></tr>
-<tr><td>Steve Lieberman</td><td>Sam Carraher</td><td>Ruben Hernandez</td><td>Chris Martin</td></tr>
-<tr><td>Bret Bologna</td><td>Dan Sherman</td><td>Mike Barancyk</td><td>Hunter Carmichael</td></tr>
+<tr><td>Van Huffine</td><td>Ron Carraher</td><td>Eric Newell</td><td>Kevin Sullivan</td></tr>
+<tr><td>Ricky Carraher</td><td>Dave Franklin</td><td>Dan Darelson</td><td>Alec Barancyk</td></tr>
+<tr><td>Steve Lieberman</td><td>Dan Sherman</td><td>Ruben Hernandez</td><td>Hunter Carmichael</td></tr>
+<tr><td>Sam Carraher</td><td>Bret Bologna</td><td>Chris Martin</td><td>Mike Barancyk</td></tr>
 </table>
     </div>
   </main>
