--- a/pages/interflight-singles.html
+++ b/pages/interflight-singles.html
@@ -26,10 +26,10 @@
       <h2>Foursomes</h2>
       <table class="table">
 <tr><th>Match</th><th>Match</th></tr>
-<tr><td>Dave Franklin &nbsp;vs&nbsp; Van Huffine</td><td>Kevin Sullivan &nbsp;vs&nbsp; Alec Barancyk</td></tr>
-<tr><td>Bret Bologna &nbsp;vs&nbsp; Sam Carraher</td><td>Dan Darelson &nbsp;vs&nbsp; Chris Martin</td></tr>
-<tr><td>Steve Lieberman &nbsp;vs&nbsp; Ricky Carraher</td><td>Eric Newell &nbsp;vs&nbsp; Dan Sherman</td></tr>
-<tr><td>Ron Carraher &nbsp;vs&nbsp; Hunter Carmichael</td><td>Ruben Hernandez &nbsp;vs&nbsp; Mike Barancyk</td></tr>
+<tr><td>Dave Franklin &nbsp;vs&nbsp; Kevin Sullivan</td><td>Bret Bologna &nbsp;vs&nbsp; Dan Darelson</td></tr>
+<tr><td>Van Huffine &nbsp;vs&nbsp; Alec Barancyk</td><td>Sam Carraher &nbsp;vs&nbsp; Chris Martin</td></tr>
+<tr><td>Steve Lieberman &nbsp;vs&nbsp; Eric Newell</td><td>Ron Carraher &nbsp;vs&nbsp; Hunter Carmichael</td></tr>
+<tr><td>Ricky Carraher &nbsp;vs&nbsp; Ruben Hernandez</td><td>Dan Sherman &nbsp;vs&nbsp; Mike Barancyk</td></tr>
 </table>
     </div>
   </main>
