--- a/pages/white-net-alt-best-ball.html
+++ b/pages/white-net-alt-best-ball.html
@@ -26,8 +26,8 @@
       <h2>Foursomes</h2>
       <table class="table">
 <tr><th colspan='2'>Team Ricky</th><th colspan='2'>Team Sherman</th></tr>
-<tr><td>Ricky Carraher</td><td>Ron Carraher</td><td>Steve Lieberman</td><td>Bret Bologna</td></tr>
-<tr><td>Sam Carraher</td><td>Dan Sherman</td><td>Van Huffine</td><td>Dave Franklin</td></tr>
+<tr><td>Ricky Carraher</td><td>Steve Lieberman</td><td>Sam Carraher</td><td>Van Huffine</td></tr>
+<tr><td>Ron Carraher</td><td>Bret Bologna</td><td>Dan Sherman</td><td>Dave Franklin</td></tr>
 </table>
     </div>
   </main>
