--- a/pages/white-singles.html
+++ b/pages/white-singles.html
@@ -26,8 +26,8 @@
       <h2>Foursomes</h2>
       <table class="table">
 <tr><th>Match</th><th>Match</th></tr>
-<tr><td>Ricky Carraher &nbsp;vs&nbsp; Ron Carraher</td><td>Dan Sherman &nbsp;vs&nbsp; Sam Carraher</td></tr>
-<tr><td>Bret Bologna &nbsp;vs&nbsp; Steve Lieberman</td><td>Van Huffine &nbsp;vs&nbsp; Dave Franklin</td></tr>
+<tr><td>Ricky Carraher &nbsp;vs&nbsp; Dan Sherman</td><td>Bret Bologna &nbsp;vs&nbsp; Van Huffine</td></tr>
+<tr><td>Ron Carraher &nbsp;vs&nbsp; Sam Carraher</td><td>Steve Lieberman &nbsp;vs&nbsp; Dave Franklin</td></tr>
 </table>
     </div>
   </main>
