--- a/pages/blue-net-best-ball.html
+++ b/pages/blue-net-best-ball.html
@@ -26,8 +26,8 @@
       <h2>Foursomes</h2>
       <table class="table">
 <tr><th colspan='2'>Team Mike</th><th colspan='2'>Team Ruben</th></tr>
-<tr><td>Mike Barancyk</td><td>Dan Darelson</td><td>Alec Barancyk</td><td>Chris Martin</td></tr>
-<tr><td>Ruben Hernandez</td><td>Hunter Carmichael</td><td>Kevin Sullivan</td><td>Eric Newell</td></tr>
+<tr><td>Mike Barancyk</td><td>Alec Barancyk</td><td>Ruben Hernandez</td><td>Kevin Sullivan</td></tr>
+<tr><td>Dan Darelson</td><td>Chris Martin</td><td>Hunter Carmichael</td><td>Eric Newell</td></tr>
 </table>
     </div>
   </main>
