--- a/index.html
+++ b/index.html
@@ -1,99 +1,39 @@
-
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>Winter Classic</title>
-  <link rel="manifest" href="/winter_classic/manifest.webmanifest">
-  <link rel="apple-touch-icon" href="/winter_classic/assets/icon-192.png">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="default">
-  <meta name="theme-color" content="#2a78c8">
   <link rel="stylesheet" href="/winter_classic/assets/styles.css">
-  <script>
-    if ("serviceWorker" in navigator) {
-      window.addEventListener("load", () => navigator.serviceWorker.register("/winter_classic/service-worker.js"));
-    }
-  </script>
 </head>
 <body>
-  <header class="header">
-    <div class="logo">WC</div>
-    <h1>Winter Classic</h1>
-  </header>
-  <main class="container">
-    <div class="section">
-      <span class="badge">Tap • Add to Home Screen</span>
-      <p style="margin:8px 0 0">Install on iPhone from Safari: Share ▸ Add to Home Screen.</p>
+  
+<header class="header" style="display:flex;align-items:center;gap:10px;padding:12px 16px;background:linear-gradient(135deg,#2a78c8,#1f5ea0);color:#fff;">
+  <img src="/winter_classic/assets/SVG/WWC_logo.svg" alt="WWC Logo" style="height:40px">
+  <h1 style="margin:0;font-size:18px;line-height:1">Winter Classic</h1>
+</header>
+
+  <main class="container" style="max-width:900px;margin:0 auto;padding:16px;">
+    <div class="card" style="text-align:center;border:1px solid #e2e8f0;border-radius:12px;background:#fff;padding:16px;margin-bottom:16px;">
+      <img src="/winter_classic/assets/SVG/golf.svg" alt="Golf" width="80">
+      <h2 style="margin:8px 0 0">Golf</h2>
+      <p style="margin:6px 0 12px;color:#475569">Event schedule and details</p>
+      <a class="btn" href="/winter_classic/pages/golf.html" style="display:inline-block;padding:8px 12px;background:#2a78c8;color:#fff;border-radius:10px;text-decoration:none;font-weight:600;">Open</a>
     </div>
 
-    <div class="section">
-      <h2>Day 1 • December 11</h2>
-      <h3>Morning</h3>
-      <div class="grid">
-        <a class="card" href="/winter_classic/pages/white-net-best-ball.html">
-          <h3>White Net Best Ball</h3>
-          <span class="btn">Open</span>
-        </a>
-        <a class="card" href="/winter_classic/pages/blue-net-best-ball.html">
-          <h3>Blue Net Best Ball</h3>
-          <span class="btn">Open</span>
-        </a>
-      </div>
-      <h3>Afternoon</h3>
-      <div class="grid">
-        <a class="card" href="/winter_classic/pages/interflight-chapman.html">
-          <h3>InterFlight Chapman</h3>
-          <span class="btn">Open</span>
-        </a>
-      </div>
+    <div class="card" style="text-align:center;border:1px solid #e2e8f0;border-radius:12px;background:#fff;padding:16px;margin-bottom:16px;">
+      <img src="/winter_classic/assets/SVG/bed.svg" alt="Housing" width="80">
+      <h2 style="margin:8px 0 0">Housing</h2>
+      <p style="margin:6px 0 12px;color:#475569">Addresses, rooms, contacts</p>
+      <a class="btn" href="/winter_classic/pages/housing.html" style="display:inline-block;padding:8px 12px;background:#2a78c8;color:#fff;border-radius:10px;text-decoration:none;font-weight:600;">Open</a>
     </div>
 
-    <div class="section">
-      <h2>Day 2 • December 12</h2>
-      <h3>Morning</h3>
-      <div class="grid">
-        <a class="card" href="/winter_classic/pages/white-net-alt-best-ball.html">
-          <h3>White Net Alternate Best Ball</h3>
-          <span class="btn">Open</span>
-        </a>
-        <a class="card" href="/winter_classic/pages/blue-net-alt-best-ball.html">
-          <h3>Blue Net Alt Best Ball</h3>
-          <span class="btn">Open</span>
-        </a>
-      </div>
-      <h3>Afternoon</h3>
-      <div class="grid">
-        <a class="card" href="/winter_classic/pages/interflight-scramble.html">
-          <h3>InterFlight Scramble</h3>
-          <span class="btn">Open</span>
-        </a>
-      </div>
-    </div>
-
-    <div class="section">
-      <h2>Day 3 • December 13</h2>
-      <h3>Morning</h3>
-      <div class="grid">
-        <a class="card" href="/winter_classic/pages/white-singles.html">
-          <h3>White Singles</h3>
-          <span class="btn">Open</span>
-        </a>
-        <a class="card" href="/winter_classic/pages/blue-singles.html">
-          <h3>Blue Singles</h3>
-          <span class="btn">Open</span>
-        </a>
-      </div>
-      <h3>Afternoon</h3>
-      <div class="grid">
-        <a class="card" href="/winter_classic/pages/interflight-singles.html">
-          <h3>InterFlight Singles</h3>
-          <span class="btn">Open</span>
-        </a>
-      </div>
+    <div class="card" style="text-align:center;border:1px solid #e2e8f0;border-radius:12px;background:#fff;padding:16px;margin-bottom:16px;">
+      <img src="/winter_classic/assets/SVG/money.svg" alt="Gambling" width="80">
+      <h2 style="margin:8px 0 0">Gambling</h2>
+      <p style="margin:6px 0 12px;color:#475569">Wagers, rules, payouts</p>
+      <a class="btn" href="/winter_classic/pages/gambling.html" style="display:inline-block;padding:8px 12px;background:#2a78c8;color:#fff;border-radius:10px;text-decoration:none;font-weight:600;">Open</a>
     </div>
   </main>
-  <div class="footer">Built for offline use • Winter Classic</div>
 </body>
 </html>
