--- a/pages/golf.html
+++ b/pages/golf.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <title>Winter Classic</title>
+  <title>Golf</title>
   <link rel="manifest" href="/winter_classic/manifest.webmanifest">
   <link rel="apple-touch-icon" href="/winter_classic/assets/icon-192.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
