--- a/pages/interflight-chapman.html
+++ b/pages/interflight-chapman.html
@@ -1,37 +1,39 @@
 
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>InterFlight Chapman • Winter Classic</title>
-  <link rel="stylesheet" href="/winter_classic/assets/styles.css">
-</head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<title>InterFlight Chapman • Winter Classic</title>
+<link href="/winter_classic/assets/styles.css" rel="stylesheet"/>
+<style>table tr:nth-child(even) { background-color: #f2f2f2; } table tr:nth-child(odd) { background-color: #ffffff; }</style></head>
 <body>
-  <header class="header">
-    <a class="back" href="/winter_classic/index.html">‹ Back</a>
-    <h1 style="margin-left:8px">InterFlight Chapman</h1>
-  </header>
-  <main class="container">
-    <div class="section">
-      <div class="meta"><strong>Date/Time:</strong> 12/11 • Afternoon</div>
-      <h2>Game Description</h2>
-      <p>Each player on the two-person team tees off, then they switch balls for their second shots. After the second shot, the team selects the better ball and plays alternate shots into the hole.</p>
-    </div>
-    <div class="section">
-      <h2>Handicaps</h2>
-      <p>Take 60% of the lower-handicap player’s handicap and 40% of the higher-handicap player’s handicap. Add those two numbers together, then round down to get the team’s total handicap.</p>
-    </div>
-    <div class="section">
-      <h2>Foursomes</h2>
-      <table class="table">
-<tr><th colspan='2'>White Flight</th><th colspan='2'>Blue Flight</th></tr>
+<header class="header" style="display:flex;align-items:center;gap:10px;padding:12px 16px;background:linear-gradient(135deg,#2a78c8,#1f5ea0);color:#fff;">
+<a class="back" href="/winter_classic/index.html" style="color:white;text-decoration:none;font-size:18px;">‹</a>
+<img alt="WWC Logo" src="/winter_classic/assets/SVG/WWC_logo.svg" style="height:40px"/>
+<h1 style="margin:0;font-size:18px;line-height:1;">InterFlight Chapman</h1>
+</header>
+<main class="container">
+<div class="section">
+<div class="meta"><strong>Date/Time:</strong> 12/11 • Afternoon</div>
+<h2>Game Description</h2>
+<p>Each player on the two-person team tees off, then they switch balls for their second shots. After the second shot, the team selects the better ball and plays alternate shots into the hole.</p>
+</div>
+<div class="section">
+<h2>Handicaps</h2>
+<p>Take 60% of the lower-handicap player’s handicap and 40% of the higher-handicap player’s handicap. Add those two numbers together, then round down to get the team’s total handicap.</p>
+</div>
+<div class="section">
+<h2>Foursomes</h2>
+<table class="table">
+<tr><th colspan="2">White Flight</th><th colspan="2">Blue Flight</th></tr>
 <tr><td>Van Huffine</td><td>Ron Carraher</td><td>Eric Newell</td><td>Kevin Sullivan</td></tr>
 <tr><td>Ricky Carraher</td><td>Dave Franklin</td><td>Dan Darelson</td><td>Alec Barancyk</td></tr>
 <tr><td>Steve Lieberman</td><td>Dan Sherman</td><td>Ruben Hernandez</td><td>Hunter Carmichael</td></tr>
 <tr><td>Sam Carraher</td><td>Bret Bologna</td><td>Chris Martin</td><td>Mike Barancyk</td></tr>
 </table>
-    </div>
-  </main>
+</div>
+</main>
 </body>
 </html>
