--- a/pages/interflight-scramble.html
+++ b/pages/interflight-scramble.html
@@ -1,37 +1,39 @@
 
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>InterFlight Scramble • Winter Classic</title>
-  <link rel="stylesheet" href="/winter_classic/assets/styles.css">
-</head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<title>InterFlight Scramble • Winter Classic</title>
+<link href="/winter_classic/assets/styles.css" rel="stylesheet"/>
+<style>table tr:nth-child(even) { background-color: #f2f2f2; } table tr:nth-child(odd) { background-color: #ffffff; }</style></head>
 <body>
-  <header class="header">
-    <a class="back" href="/winter_classic/index.html">‹ Back</a>
-    <h1 style="margin-left:8px">InterFlight Scramble</h1>
-  </header>
-  <main class="container">
-    <div class="section">
-      <div class="meta"><strong>Date/Time:</strong> 12/12 • Afternoon</div>
-      <h2>Game Description</h2>
-      <p>Both players on the team hit a tee shot, choose the best result, and then both play their next shots from that location. This process continues until the ball is holed. Throughout the match you must use at least 7 of each players shots from the tee.</p>
-    </div>
-    <div class="section">
-      <h2>Handicaps</h2>
-      <p>Take 35% of the lower-handicap player’s handicap and 15% of the higher-handicap player’s handicap. Add those two numbers together, then round down to get the team’s total handicap.</p>
-    </div>
-    <div class="section">
-      <h2>Foursomes</h2>
-      <table class="table">
-<tr><th colspan='2'>White Flight</th><th colspan='2'>Blue Flight</th></tr>
+<header class="header" style="display:flex;align-items:center;gap:10px;padding:12px 16px;background:linear-gradient(135deg,#2a78c8,#1f5ea0);color:#fff;">
+<a class="back" href="/winter_classic/index.html" style="color:white;text-decoration:none;font-size:18px;">‹</a>
+<img alt="WWC Logo" src="/winter_classic/assets/SVG/WWC_logo.svg" style="height:40px"/>
+<h1 style="margin:0;font-size:18px;line-height:1;">InterFlight Scramble</h1>
+</header>
+<main class="container">
+<div class="section">
+<div class="meta"><strong>Date/Time:</strong> 12/12 • Afternoon</div>
+<h2>Game Description</h2>
+<p>Both players on the team hit a tee shot, choose the best result, and then both play their next shots from that location. This process continues until the ball is holed. Throughout the match you must use at least 7 of each players shots from the tee.</p>
+</div>
+<div class="section">
+<h2>Handicaps</h2>
+<p>Take 35% of the lower-handicap player’s handicap and 15% of the higher-handicap player’s handicap. Add those two numbers together, then round down to get the team’s total handicap.</p>
+</div>
+<div class="section">
+<h2>Foursomes</h2>
+<table class="table">
+<tr><th colspan="2">White Flight</th><th colspan="2">Blue Flight</th></tr>
 <tr><td>Dan Sherman</td><td>Sam Carraher</td><td>Hunter Carmichael</td><td>Alec Barancyk</td></tr>
 <tr><td>Ron Carraher</td><td>Van Huffine</td><td>Kevin Sullivan</td><td>Dan Darelson</td></tr>
 <tr><td>Bret Bologna</td><td>Ricky Carraher</td><td>Chris Martin</td><td>Ruben Hernandez</td></tr>
 <tr><td>Dave Franklin</td><td>Steve Lieberman</td><td>Eric Newell</td><td>Mike Barancyk</td></tr>
 </table>
-    </div>
-  </main>
+</div>
+</main>
 </body>
 </html>
