--- a/pages/white-net-alt-best-ball.html
+++ b/pages/white-net-alt-best-ball.html
@@ -1,35 +1,37 @@
 
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>White Net Alternate Best Ball • Winter Classic</title>
-  <link rel="stylesheet" href="/winter_classic/assets/styles.css">
-</head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<title>White Net Alternate Best Ball • Winter Classic</title>
+<link href="/winter_classic/assets/styles.css" rel="stylesheet"/>
+<style>table tr:nth-child(even) { background-color: #f2f2f2; } table tr:nth-child(odd) { background-color: #ffffff; }</style></head>
 <body>
-  <header class="header">
-    <a class="back" href="/winter_classic/index.html">‹ Back</a>
-    <h1 style="margin-left:8px">White Net Alternate Best Ball</h1>
-  </header>
-  <main class="container">
-    <div class="section">
-      <div class="meta"><strong>Date/Time:</strong> 12/12 • Morning</div>
-      <h2>Game Description</h2>
-      <p>Each player hits their own tee shot. After the tee shots, you and your teammate switch balls and play your partner’s ball from where it lies. You continue to hit the ball your teammate last struck until the ball is holed. The team records one score for the hole — whichever ball took fewer strokes to get into the hole.</p>
-    </div>
-    <div class="section">
-      <h2>Handicaps</h2>
-      <p>Take 60% of the lower-handicap player’s handicap and 40% of the higher-handicap player’s handicap. Add those two numbers together, then round down to get the team’s total handicap.</p>
-    </div>
-    <div class="section">
-      <h2>Foursomes</h2>
-      <table class="table">
-<tr><th colspan='2'>Team Ricky</th><th colspan='2'>Team Sherman</th></tr>
+<header class="header" style="display:flex;align-items:center;gap:10px;padding:12px 16px;background:linear-gradient(135deg,#2a78c8,#1f5ea0);color:#fff;">
+<a class="back" href="/winter_classic/index.html" style="color:white;text-decoration:none;font-size:18px;">‹</a>
+<img alt="WWC Logo" src="/winter_classic/assets/SVG/WWC_logo.svg" style="height:40px"/>
+<h1 style="margin:0;font-size:18px;line-height:1;">White Net Alternate Best Ball</h1>
+</header>
+<main class="container">
+<div class="section">
+<div class="meta"><strong>Date/Time:</strong> 12/12 • Morning</div>
+<h2>Game Description</h2>
+<p>Each player hits their own tee shot. After the tee shots, you and your teammate switch balls and play your partner’s ball from where it lies. You continue to hit the ball your teammate last struck until the ball is holed. The team records one score for the hole — whichever ball took fewer strokes to get into the hole.</p>
+</div>
+<div class="section">
+<h2>Handicaps</h2>
+<p>Take 60% of the lower-handicap player’s handicap and 40% of the higher-handicap player’s handicap. Add those two numbers together, then round down to get the team’s total handicap.</p>
+</div>
+<div class="section">
+<h2>Foursomes</h2>
+<table class="table">
+<tr><th colspan="2">Team Ricky</th><th colspan="2">Team Sherman</th></tr>
 <tr><td>Ricky Carraher</td><td>Steve Lieberman</td><td>Sam Carraher</td><td>Van Huffine</td></tr>
 <tr><td>Ron Carraher</td><td>Bret Bologna</td><td>Dan Sherman</td><td>Dave Franklin</td></tr>
 </table>
-    </div>
-  </main>
+</div>
+</main>
 </body>
 </html>
