--- a/pages/blue-net-best-ball.html
+++ b/pages/blue-net-best-ball.html
@@ -1,35 +1,37 @@
 
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Blue Net Best Ball • Winter Classic</title>
-  <link rel="stylesheet" href="/winter_classic/assets/styles.css">
-</head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<title>Blue Net Best Ball • Winter Classic</title>
+<link href="/winter_classic/assets/styles.css" rel="stylesheet"/>
+<style>table tr:nth-child(even) { background-color: #f2f2f2; } table tr:nth-child(odd) { background-color: #ffffff; }</style></head>
 <body>
-  <header class="header">
-    <a class="back" href="/winter_classic/index.html">‹ Back</a>
-    <h1 style="margin-left:8px">Blue Net Best Ball</h1>
-  </header>
-  <main class="container">
-    <div class="section">
-      <div class="meta"><strong>Date/Time:</strong> 12/11 • Morning</div>
-      <h2>Game Description</h2>
-      <p>In this format, each two-person team plays their own ball on every hole. The lower of the two net scores (after applying handicaps) counts as the team score for that hole.</p>
-    </div>
-    <div class="section">
-      <h2>Handicaps</h2>
-      <p>100% Handicap Used</p>
-    </div>
-    <div class="section">
-      <h2>Foursomes</h2>
-      <table class="table">
-<tr><th colspan='2'>Team Mike</th><th colspan='2'>Team Ruben</th></tr>
+<header class="header" style="display:flex;align-items:center;gap:10px;padding:12px 16px;background:linear-gradient(135deg,#2a78c8,#1f5ea0);color:#fff;">
+<a class="back" href="/winter_classic/index.html" style="color:white;text-decoration:none;font-size:18px;">‹</a>
+<img alt="WWC Logo" src="/winter_classic/assets/SVG/WWC_logo.svg" style="height:40px"/>
+<h1 style="margin:0;font-size:18px;line-height:1;">Blue Net Best Ball</h1>
+</header>
+<main class="container">
+<div class="section">
+<div class="meta"><strong>Date/Time:</strong> 12/11 • Morning</div>
+<h2>Game Description</h2>
+<p>In this format, each two-person team plays their own ball on every hole. The lower of the two net scores (after applying handicaps) counts as the team score for that hole.</p>
+</div>
+<div class="section">
+<h2>Handicaps</h2>
+<p>100% Handicap Used</p>
+</div>
+<div class="section">
+<h2>Foursomes</h2>
+<table class="table">
+<tr><th colspan="2">Team Mike</th><th colspan="2">Team Ruben</th></tr>
 <tr><td>Mike Barancyk</td><td>Alec Barancyk</td><td>Ruben Hernandez</td><td>Kevin Sullivan</td></tr>
 <tr><td>Dan Darelson</td><td>Chris Martin</td><td>Hunter Carmichael</td><td>Eric Newell</td></tr>
 </table>
-    </div>
-  </main>
+</div>
+</main>
 </body>
 </html>
