--- a/pages/blue-singles.html
+++ b/pages/blue-singles.html
@@ -1,35 +1,37 @@
 
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Blue Singles • Winter Classic</title>
-  <link rel="stylesheet" href="/winter_classic/assets/styles.css">
-</head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<title>Blue Singles • Winter Classic</title>
+<link href="/winter_classic/assets/styles.css" rel="stylesheet"/>
+<style>table tr:nth-child(even) { background-color: #f2f2f2; } table tr:nth-child(odd) { background-color: #ffffff; }</style></head>
 <body>
-  <header class="header">
-    <a class="back" href="/winter_classic/index.html">‹ Back</a>
-    <h1 style="margin-left:8px">Blue Singles</h1>
-  </header>
-  <main class="container">
-    <div class="section">
-      <div class="meta"><strong>Date/Time:</strong> 12/13 • Morning</div>
-      <h2>Game Description</h2>
-      <p>Each golfer plays their own ball for the entire round, counting every stroke until the ball is holed. Scores are kept using net stroke play, meaning handicaps are applied to determine each player’s net total.</p>
-    </div>
-    <div class="section">
-      <h2>Handicaps</h2>
-      <p>100% Handicap Used</p>
-    </div>
-    <div class="section">
-      <h2>Foursomes</h2>
-      <table class="table">
+<header class="header" style="display:flex;align-items:center;gap:10px;padding:12px 16px;background:linear-gradient(135deg,#2a78c8,#1f5ea0);color:#fff;">
+<a class="back" href="/winter_classic/index.html" style="color:white;text-decoration:none;font-size:18px;">‹</a>
+<img alt="WWC Logo" src="/winter_classic/assets/SVG/WWC_logo.svg" style="height:40px"/>
+<h1 style="margin:0;font-size:18px;line-height:1;">Blue Singles</h1>
+</header>
+<main class="container">
+<div class="section">
+<div class="meta"><strong>Date/Time:</strong> 12/13 • Morning</div>
+<h2>Game Description</h2>
+<p>Each golfer plays their own ball for the entire round, counting every stroke until the ball is holed. Scores are kept using net stroke play, meaning handicaps are applied to determine each player’s net total.</p>
+</div>
+<div class="section">
+<h2>Handicaps</h2>
+<p>100% Handicap Used</p>
+</div>
+<div class="section">
+<h2>Foursomes</h2>
+<table class="table">
 <tr><th>Match</th><th>Match</th></tr>
-<tr><td>Mike Barancyk &nbsp;vs&nbsp; Ruben Hernandez</td><td>Dan Darelson &nbsp;vs&nbsp; Hunter Carmichael</td></tr>
-<tr><td>Chris Martin &nbsp;vs&nbsp; Kevin Sullivan</td><td>Alec Barancyk &nbsp;vs&nbsp; Eric Newell</td></tr>
+<tr><td>Mike Barancyk  vs  Ruben Hernandez</td><td>Dan Darelson  vs  Hunter Carmichael</td></tr>
+<tr><td>Chris Martin  vs  Kevin Sullivan</td><td>Alec Barancyk  vs  Eric Newell</td></tr>
 </table>
-    </div>
-  </main>
+</div>
+</main>
 </body>
 </html>
