--- a/pages/white-singles.html
+++ b/pages/white-singles.html
@@ -1,35 +1,37 @@
 
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>White Singles • Winter Classic</title>
-  <link rel="stylesheet" href="/winter_classic/assets/styles.css">
-</head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<title>White Singles • Winter Classic</title>
+<link href="/winter_classic/assets/styles.css" rel="stylesheet"/>
+<style>table tr:nth-child(even) { background-color: #f2f2f2; } table tr:nth-child(odd) { background-color: #ffffff; }</style></head>
 <body>
-  <header class="header">
-    <a class="back" href="/winter_classic/index.html">‹ Back</a>
-    <h1 style="margin-left:8px">White Singles</h1>
-  </header>
-  <main class="container">
-    <div class="section">
-      <div class="meta"><strong>Date/Time:</strong> 12/13 • Morning</div>
-      <h2>Game Description</h2>
-      <p>Each golfer plays their own ball for the entire round, counting every stroke until the ball is holed. Scores are kept using net stroke play, meaning handicaps are applied to determine each player’s net total.</p>
-    </div>
-    <div class="section">
-      <h2>Handicaps</h2>
-      <p>100% Handicap Used</p>
-    </div>
-    <div class="section">
-      <h2>Foursomes</h2>
-      <table class="table">
+<header class="header" style="display:flex;align-items:center;gap:10px;padding:12px 16px;background:linear-gradient(135deg,#2a78c8,#1f5ea0);color:#fff;">
+<a class="back" href="/winter_classic/index.html" style="color:white;text-decoration:none;font-size:18px;">‹</a>
+<img alt="WWC Logo" src="/winter_classic/assets/SVG/WWC_logo.svg" style="height:40px"/>
+<h1 style="margin:0;font-size:18px;line-height:1;">White Singles</h1>
+</header>
+<main class="container">
+<div class="section">
+<div class="meta"><strong>Date/Time:</strong> 12/13 • Morning</div>
+<h2>Game Description</h2>
+<p>Each golfer plays their own ball for the entire round, counting every stroke until the ball is holed. Scores are kept using net stroke play, meaning handicaps are applied to determine each player’s net total.</p>
+</div>
+<div class="section">
+<h2>Handicaps</h2>
+<p>100% Handicap Used</p>
+</div>
+<div class="section">
+<h2>Foursomes</h2>
+<table class="table">
 <tr><th>Match</th><th>Match</th></tr>
-<tr><td>Ricky Carraher &nbsp;vs&nbsp; Dan Sherman</td><td>Bret Bologna &nbsp;vs&nbsp; Van Huffine</td></tr>
-<tr><td>Ron Carraher &nbsp;vs&nbsp; Sam Carraher</td><td>Steve Lieberman &nbsp;vs&nbsp; Dave Franklin</td></tr>
+<tr><td>Ricky Carraher  vs  Dan Sherman</td><td>Bret Bologna  vs  Van Huffine</td></tr>
+<tr><td>Ron Carraher  vs  Sam Carraher</td><td>Steve Lieberman  vs  Dave Franklin</td></tr>
 </table>
-    </div>
-  </main>
+</div>
+</main>
 </body>
 </html>
