--- a/pages/golf.html
+++ b/pages/golf.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2">
   <title>Golf</title>
   <link rel="manifest" href="/winter_classic/manifest.webmanifest">
   <link rel="apple-touch-icon" href="/winter_classic/assets/icon-192.png">
