--- a/pages/housing.html
+++ b/pages/housing.html
@@ -9,7 +9,7 @@
   
 
 <header class="header" style="display:flex;align-items:center;gap:10px;padding:12px 16px;background:linear-gradient(135deg,#2a78c8,#1f5ea0);color:#fff;">
-  <a class="back" href="/winter_classic/index.html" style="color:white;text-decoration:none;font-size:18px;">‹</a>
+  <a class="back" href="/winter_classic/index.html" style="color:white;text-decoration:none;font-size:18px;">‹ Back</a>
   <img src="/winter_classic/assets/SVG/WWC_logo.svg" alt="WWC Logo" style="height:40px">
   <h1 style="margin:0;font-size:18px;line-height:1;">Housing</h1>
 </header>
