--- a/pages/interflight-chapman.html
+++ b/pages/interflight-chapman.html
@@ -10,7 +10,7 @@
 <style>table tr:nth-child(even) { background-color: #f2f2f2; } table tr:nth-child(odd) { background-color: #ffffff; }</style></head>
 <body>
 <header class="header" style="display:flex;align-items:center;gap:10px;padding:12px 16px;background:linear-gradient(135deg,#2a78c8,#1f5ea0);color:#fff;">
-<a class="back" href="/winter_classic/index.html" style="color:white;text-decoration:none;font-size:18px;">‹</a>
+<a class="back" href="/winter_classic/pages/golf.html" style="color:white;text-decoration:none;font-size:18px;">‹ Back</a>
 <img alt="WWC Logo" src="/winter_classic/assets/SVG/WWC_logo.svg" style="height:40px"/>
 <h1 style="margin:0;font-size:18px;line-height:1;">InterFlight Chapman</h1>
 </header>
