--- a/pages/gambling.html
+++ b/pages/gambling.html
@@ -1,22 +1,35 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2">
-  <title>Gambling</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2">
+  <title>Gambling • Winter Classic</title>
   <link rel="stylesheet" href="/winter_classic/assets/styles.css">
 </head>
 <body>
-  
+  <header class="header">
+    <a class="back" href="/winter_classic/index.html">‹ Back</a>
+    <img src="/winter_classic/assets/SVG/WWC_logo.svg" alt="WWC Logo" class="logo">
+    <h1>Gambling</h1>
+  </header>
 
-<header class="header" style="display:flex;align-items:center;gap:10px;padding:12px 16px;background:linear-gradient(135deg,#2a78c8,#1f5ea0);color:#fff;">
-  <a class="back" href="/winter_classic/index.html" style="color:white;text-decoration:none;font-size:18px;">‹ Back</a>
-  <img src="/winter_classic/assets/SVG/WWC_logo.svg" alt="WWC Logo" style="height:40px">
-  <h1 style="margin:0;font-size:18px;line-height:1;">Gambling</h1>
-</header>
-
-
-  <main class="container" style="max-width:900px;margin:0 auto;padding:16px;">
-    <p>Gambling info coming soon…</p>
+  <main class="container">
+    <section class="section">
+      <h2>Gambling Summary</h2>
+      <p>There are 16 players, and each one pays $300 to join, making a total pot of $4,800. The money is divided like this:</p>
+      <ul>
+        <li>$1,920 is for matches. Each player who wins a match within their foursome earns $40.</li>
+        <li>$1,280 is for Net Skins, Gross Skins, and Closest to the Pin (CTP) prizes.</li>
+        <li>$400 goes to the team that wins between Team Ricky and Team Sherman.</li>
+        <li>$400 goes to the team that wins between Team Mike and Team Ruben.</li>
+        <li>$800 goes to the flight (Blue or White) that wins the InterFlight competition.</li>
+      </ul>
+      <p>Games and payouts will be tracked through the <strong>Squabbit app</strong>.</p>
+    </section>
   </main>
+
+  <footer class="footer">
+    Built for offline use • Winter Classic
+  </footer>
 </body>
 </html>
