--- a/pages/housing.html
+++ b/pages/housing.html
@@ -1,22 +1,65 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2">
-  <title>Housing</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2">
+  <title>Housing • Winter Classic</title>
   <link rel="stylesheet" href="/winter_classic/assets/styles.css">
 </head>
 <body>
-  
+  <header class="header">
+    <a class="back" href="/winter_classic/index.html">‹ Back</a>
+    <img src="/winter_classic/assets/SVG/WWC_logo.svg" alt="WWC Logo" class="logo">
+    <h1>Housing</h1>
+  </header>
 
-<header class="header" style="display:flex;align-items:center;gap:10px;padding:12px 16px;background:linear-gradient(135deg,#2a78c8,#1f5ea0);color:#fff;">
-  <a class="back" href="/winter_classic/index.html" style="color:white;text-decoration:none;font-size:18px;">‹ Back</a>
-  <img src="/winter_classic/assets/SVG/WWC_logo.svg" alt="WWC Logo" style="height:40px">
-  <h1 style="margin:0;font-size:18px;line-height:1;">Housing</h1>
-</header>
+  <main class="container">
+    <section class="section">
+      <h2>Player Housing</h2>
+      <p>The following are the four houses and the players staying in each one:</p>
+      
+      <div class="grid">
+        <div class="card">
+          <h3>Ron Carraher House</h3>
+          <ul>
+            <li>Sam Carraher</li>
+            <li>Ricky Carraher</li>
+            <li>Steve Lieberman</li>
+          </ul>
+        </div>
 
+        <div class="card">
+          <h3>Bret Bologna House</h3>
+          <ul>
+            <li>Kevin Sullivan</li>
+            <li>Dan Sherman</li>
+            <li>Dave Franklin</li>
+          </ul>
+        </div>
 
-  <main class="container" style="max-width:900px;margin:0 auto;padding:16px;">
-    <p>Housing details coming soon…</p>
+        <div class="card">
+          <h3>Ruben Hernandez House</h3>
+          <ul>
+            <li>Hunter Carmichael</li>
+            <li>Chris Martin</li>
+            <li>Dan Darelson</li>
+          </ul>
+        </div>
+
+        <div class="card">
+          <h3>Mike Barancyk House</h3>
+          <ul>
+            <li>Van Huffine</li>
+            <li>Eric Newell</li>
+            <li>Alec Barancyk</li>
+          </ul>
+        </div>
+      </div>
+    </section>
   </main>
+
+  <footer class="footer">
+    Built for offline use • Winter Classic
+  </footer>
 </body>
 </html>
